# nntuWashingMachine

./: .env  .env-example  Dockerfile  README.md  main.py  pyproject.toml
app/: config.py  handlers.py  keyboard.py  main.py
app/bot/: constants.py  handlers.py  keyboard.py
app/database/: config.py  database.py  requests.py
